syntax = "proto3";

package api.auth.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/auth/v1;v1";

// Auth 认证服务定义了所有与用户认证和授权相关的RPC接口。
service Auth {
  // --- 核心认证接口 ---

  // Authenticate 验证用户凭据并返回JWT Token。
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  // RefreshToken 刷新JWT Token。
  rpc RefreshToken(RefreshTokenRequest) returns (AuthenticateResponse);
  // ValidateToken 验证JWT Token的有效性。
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

// --- 消息定义 ---

// AuthenticateRequest 认证请求消息。
message AuthenticateRequest {
  string username = 1; // 用户名
  string password = 2; // 密码
}

// AuthenticateResponse 认证响应消息。
message AuthenticateResponse {
  string token = 1; // 令牌
  int64 expires_at = 2; // Token 过期时间戳 (Unix seconds)
}

// RefreshTokenRequest 刷新Token请求消息。
message RefreshTokenRequest {
  string refresh_token = 1; // refresh令牌
}

// ValidateTokenRequest 验证Token请求消息。
message ValidateTokenRequest {
  string token = 1; // 令牌
}

// ValidateTokenResponse 验证Token响应消息。
message ValidateTokenResponse {
  bool valid = 1; // 有效
  uint64 user_id = 2; // 用户唯一标识
  string username = 3; // 用户名
  int64 expires_at = 4; // expires在
}